create images file and change img tags in html files

--- a/src/article-title-1.html
+++ b/src/article-title-1.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-primary">
     <header class="flex flex-row justify-between py-5 mb-5 px-10  container mx-auto items-center">
-        <img src="/Logo2.png" class=""alt="Logo2">
+        <img src="/images/Logo2.png" class=""alt="Logo2">
         <button  data-collapse-toggle="navbar-default" type="button" class="md:hidden" aria-controls="navbar-default" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -40,9 +40,9 @@
     </header>
         <main class="container mx-auto px-10  mb-10"> 
             <h2 class="text-sm text-center mb-1">News & Media</h2>
-            <img src="/vector-2.png" alt="vector" class="mx-auto">
+            <img src="/images/vector-2.png" alt="vector" class="mx-auto">
             <h1 class="text-5xl font-extrabold leading-tight text-center my-2">Article Title</h1>
-            <img src="/vector-1.png" alt="vector" class="py-4 mb-2 mx-auto ">
+            <img src="/images/vector-1.png" alt="vector" class="py-4 mb-2 mx-auto ">
             <article class="container mx-auto max-w-3xl">
                 
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>  <br>
@@ -52,14 +52,14 @@
                     
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum</p>
                 <figure class="my-6">
-                <img src="/pexels-fauxels.png" alt="pexel" >
+                <img src="/images/pexels-fauxels.png" alt="pexel" >
                 </figure>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p> <br>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. </p>
             </article>
         </main>
         <footer class="mt-40 md:mt-80 container mx-auto  px-10 mb-4">
-            <img src="/Logo2.png" class="inline mb-2"alt="Logo2">
+            <img src="/images/Logo2.png" class="inline mb-2"alt="Logo2">
             <div class="grid xl:grid-cols-3 gap-y-4">
                 <div>
                     <p class="text-tertiary-1 pb-2">Scala’s objective is to deliver complete customer satisfaction by addressing the main needs of the physical commodity industry, by continually providing an added value to the overall supply chain.</p>
