--- a/src/career.html
+++ b/src/career.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-primary">
     <header class="flex flex-row justify-between py-5 mb-5 px-10 sm:px-0 container mx-auto items-center">
-        <img src="/Logo2.png" class=""alt="Logo2">
+        <img src="/images/Logo2.png" class=""alt="Logo2">
         <button  data-collapse-toggle="navbar-default" type="button" class="md:hidden" aria-controls="navbar-default" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -38,16 +38,16 @@
             </nav>
         </div>
     </header>
-    <main class="container mx-auto px-10 sm:px-0 relative">
-        <img src="/group-26.png" alt="point" class="absolute bottom-5 -z-10 -left-28 hidden lg:block">
-        <img src="/group-25.png" alt="hex" class="absolute bottom-0 -right-20 hidden xl:block -z-10"> 
+    <main class="container mx-auto px-15 relative">
+        <img src="/images/group-26.png" alt="point" class="absolute bottom-5 -z-10 -left-28 hidden lg:block">
+        <img src="/images/group-25.png" alt="hex" class="absolute bottom-0 -right-20 hidden lg:block -z-10"> 
         <p class="text-sm text-center mb-1">Working With Us</p>
-        <img src="/vector-2.png" alt="vector" class="mx-auto">
+        <img src="/images/vector-2.png" alt="vector" class="mx-auto">
         <h1 class="text-5xl font-extrabold leading-tight text-center my-2">Careers</h1>
-        <img src="/vector-1.png" alt="vector" class="py-4 mb-2 mx-auto ">
+        <img src="/images/vector-1.png" alt="vector" class="py-4 mb-2 mx-auto ">
         <p class="text-center">Discover what it’s like to be part of the Scala team.</p>
         <figure class="container mx-auto my-6">
-            <img src="/pexels-andrea-piacquadio-3760069 1.png" alt="careers" class="w-full">
+            <img src="/images/pexels-andrea-piacquadio-3760069 1.png" alt="careers" class="w-full">
         </figure>
         <h2 class="text-2xl font-bold text-center">Introduction</h2>
         <p class="my-4 text-center">At Tricon, we credit our success and rapid growth to our greatest asset: <span class="text-secondary"> Our People.</span></p>
@@ -61,47 +61,49 @@
                 <button class="py-3.5 px-10 mx-auto text-white border-secondary border-2 bg-secondary border-solid col-span-2 md:my-8 my-4">View Positions</button>
         </div>
     </main>
-        <div class="bg-tertiary-2 mx-auto flex flex-col md:gap-y-4 gap-y-8 pt-24 pb-14">
+    <div class="bg-tertiary-2">
+        <div class=" mx-auto flex flex-col md:gap-y-4 gap-y-8 pt-24 pb-14 px-10">
             <div class="text-center leading-7 mx-auto relative">
-                <img src="/img1.png" alt="vector" class="absolute -left-24 -top-12 hidden md:block">
-                <img src="/img2.png" alt="vector" class="absolute -right-24 -bottom-12 hidden md:block ">
+                <img src="/images/img1.png" alt="vector" class="absolute -left-24 -top-12 hidden lg:block">
+                <img src="/images/img2.png" alt="vector" class="absolute -right-24 -bottom-12 hidden lg:block ">
             <p class="max-w-3xl">Working with passionate and experienced colleagues at Scala is rewarding and key to becoming front runner in a business that we developed from scratch. The varierty of chemical products that we trade at Scala is an important factor to develop synergies, be global, bring more added value to our counterparties and participate in cost saving in the supply chain process.</p>
             </div>
             <div class="flex flex-row mx-auto justify-center gap-x-4">
-                <img src="/Ellipse 1 (1).png" alt="elipse">
+                <img src="/images/ellipse.png" alt="elipse">
                 <div class="flex flex-col">
                     <p class="font-bold">Jane Doe</p>
                     <p class="text-sm">Sales Manager</p>
                 </div>
             </div>
             <div class="flex flex-row mx-auto md:gap-x-2 gap-x-6 mt-2">
-                <img src="/Star 211.png" alt="star">
-                <img src="/Star 212.png" alt="star">
-                <img src="/Star 212.png" alt="star">
+                <img src="/images/star-211.png" alt="star">
+                <img src="/images/star-212.png" alt="star">
+                <img src="/images/star-212.png" alt="star">
             </div>
         </div>
-    <section class="container mx-auto px-10 sm:px-0 mt-10">
+    </div>
+    <section class="container mx-auto px-10 mt-10">
         <h2 class="text-2xl">Employee <span class="text-secondary"> Stories </span></h2>
-        <img src="/vvv.png" alt="vector" class="mt-2">
+        <img src="/images/vvv.png" alt="vector" class="mt-2">
         <div class="grid grid-cols-2 gap-x-auto gap-x-24 gap-y-8 mt-6">
             <div class="flex flex-col col-span-2 md:col-span-1">
                 <div class="flex flex-row gap-x-2 items-center">
-                    <img src="/Face 1.png" alt="face">
+                    <img src="/images/face-1.png" alt="face">
                     <div>
                         <p>John Doe</p>
                         <p class="text-sm uppercase">WORK TYPE</p>
-                        <img src="/vvv.png" alt="vector" class="mt-1">
+                        <img src="/images/vvv.png" alt="vector" class="mt-1">
                     </div>
                 </div>
                 <p class="text-sm">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper</p>
             </div>
             <div class="flex flex-col col-span-2 md:col-span-1">
                 <div class="flex flex-row gap-x-2 items-center">
-                    <img src="/Face 1 (1).png" alt="face">
+                    <img src="/images/face-2.png" alt="face">
                     <div>
                         <p>Jane Doe</p>
                         <p class="text-sm uppercase">WORK TYPE</p>
-                        <img src="/vvv.png" alt="vector" class="mt-1">
+                        <img src="/images/vvv.png" alt="vector" class="mt-1">
                     </div>
                 </div>
                 <p class="text-sm">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper</p>
@@ -111,7 +113,7 @@
     <section class="mx-auto container xl:mt-24 mt-20 grid xl:grid-cols-4 grid-cols-3 gap-x-32 gap-y-8">
         <div class="xl:col-span-1 col-span-3 order-last xl:order-first text-center xl:text-left">
             <p class="text-sm mb-1">Explore Scala's Global Presence</p>
-            <img src="/Vector 1.png" alt="vektor" class="inline">
+            <img src="/images/vector-2.png" alt="vektor" class="inline">
             <h2 class="mt-2 font-bold text-2xl mb-3">Our Locations</h2>
             <p class="text-sm mb-6" >Almaty, Kazakhstan <br>
                 Bogota, Colombia <br>
@@ -136,11 +138,11 @@
                 <button class="text-white bg-secondary text-sm py-3 px-8 leading-7">View Our Locations</button>
         </div>
         <figure class="col-span-3">
-            <img src="/world-map-1.png" alt="World-Map" class="w-full">
+            <img src="/images/world-map-1.png" alt="World-Map" class="w-full">
         </figure>
     </section>
         <footer class="mt-20 md:mt-36 container mx-auto  px-10 mb-4">
-            <img src="/Logo2.png" class="inline mb-2"alt="Logo2">
+            <img src="/images/Logo2.png" class="inline mb-2"alt="Logo2">
             <div class="grid xl:grid-cols-3 gap-y-4">
                 <div>
                     <p class="text-tertiary-1 pb-2">Scala’s objective is to deliver complete customer satisfaction by addressing the main needs of the physical commodity industry, by continually providing an added value to the overall supply chain.</p>
