--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-primary">
     <header class="flex flex-row justify-between py-5 mb-5 px-10  container mx-auto items-center">
-        <img src="/Logo2.png" class=""alt="Logo2">
+        <img src="/images/Logo2.png" class=""alt="Logo2">
         <button  data-collapse-toggle="navbar-default" type="button" class="md:hidden" aria-controls="navbar-default" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -40,12 +40,12 @@
     </header>
     <main class="container mx-auto">
         <p class="text-sm text-center mb-1">We Would Be Happy To Connect With You</p>
-        <img src="/vector-2.png" alt="vector" class="mx-auto">
+        <img src="/images/vector-2.png" alt="vector" class="mx-auto">
         <h1 class="text-5xl font-extrabold text-center my-2">Contact Us</h1>
-        <img src="/vector-1.png" alt="vector" class="py-4 mb-2 mx-auto ">
+        <img src="/images/vector-1.png" alt="vector" class="py-4 mb-2 mx-auto ">
         <div class="flex flex-col md:flex-row gap-y-8 relative">
-            <img src="/backg-1.png" alt="square" class="hidden lg:block absolute bottom-12 -left-20">
-            <img src="/backg-1.png" alt="square" class="hidden lg:block absolute top-12 -right-20 -z-10">
+            <img src="/images/backg-1.png" alt="square" class="hidden lg:block absolute bottom-12 -left-20">
+            <img src="/images/backg-1.png" alt="square" class="hidden lg:block absolute top-12 -right-20 -z-10">
             <article class="bg-tertiary-2 my-auto mx-auto flex flex-col py-12">
                 <p class="text-sm mb-1 text-center">Houston, USA</p>
                 <h2 class="font-bold text-2xl text-center">Our Head Office</h2>
@@ -71,7 +71,7 @@
             </article>
             <article class="bg-white p-6 mx-auto">
                 <h2 class="font-bold text-2xl text-center mt-2">Send a Message</h2>
-                <img src="/vector-2.png" alt="vector" class="mx-auto mt-2 mb-4">
+                <img src="/images/vector-2.png" alt="vector" class="mx-auto mt-2 mb-4">
                 <form action="" class="grid grid-cols-2 gap-4">
                     <div class="flex flex-col gap-y-2 col-span-2 md:col-span-1 ">
                         <label for="first-name" class="text-xs">First Name</label>
@@ -363,7 +363,7 @@
         </div>
     </main>
     <footer class="mt-10 md:mt-15 container mx-auto  px-10 mb-4">
-        <img src="/Logo2.png" class="inline mb-2"alt="Logo2">
+        <img src="/images/Logo2.png" class="inline mb-2"alt="Logo2">
         <div class="grid xl:grid-cols-3 gap-y-4">
             <div>
                 <p class="text-date-grey pb-2">Scala’s objective is to deliver complete customer satisfaction by addressing the main needs of the physical commodity industry, by continually providing an added value to the overall supply chain.</p>
