--- a/src/locations.html
+++ b/src/locations.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-primary">
     <header class="flex flex-row justify-between py-5 mb-5 px-10  container mx-auto items-center">
-        <img src="/Logo2.png" class=""alt="Logo2">
+        <img src="/images/Logo2.png" class=""alt="Logo2">
         <button  data-collapse-toggle="navbar-default" type="button" class="md:hidden" aria-controls="navbar-default" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -41,18 +41,18 @@
     <main class="mx-auto container px-10 pb-5">
         <div class="hidden md:block">
             <p class="text-sm text-center mb-1">Where We Are</p>
-            <img src="/vector-2.png" alt="vector" class="mx-auto">
+            <img src="/images/vector-2.png" alt="vector" class="mx-auto">
             <h1 class="text-5xl font-extrabold leading-tight text-center my-2">Our Locations</h1>
-            <img src="/vector-1.png" alt="vector" class="py-4 mb-2 mx-auto ">
+            <img src="/images/vector-1.png" alt="vector" class="py-4 mb-2 mx-auto ">
             <div class="relative">
-                <img src="/world-map-1.png" alt="world-map" class="w-full">
+                <img src="/images/world-map-1.png" alt="world-map" class="w-full">
                 <div class="group">
-                    <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[11.8%] left-[28.2%] group-hover:hidden">
-                    <img src="/vec-white.png" alt="bookmark" class="absolute bottom-[11.8%] left-[28.2%] group-hover:block hidden">
+                    <img src="/images/bookmark.png" alt="bookmark" class="absolute bottom-[11.8%] left-[28.2%] group-hover:hidden">
+                    <img src="/images/vec-white.png" alt="bookmark" class="absolute bottom-[11.8%] left-[28.2%] group-hover:block hidden">
                     <div class="bg-white pt-6 pb-10 px-6 max-w-3xl drop-shadow-primary-shadow group-hover:flex flex-col absolute -right-[10%] bottom-0 pr-10 w-3/5 hidden">
                             <div class="flex flex-row justify-between">
                                 <p class="text-secondary text-sm ">Turkey</p>
-                                <img src="/Vector.png" alt="vector">
+                                <img src="/images/Vector.png" alt="vector">
                             </div>
                             <p class="font-bold">Istanbul</p>
                             <div class="flex flex-col items-end justify-between xl:flex-row">
@@ -81,15 +81,15 @@
                             </div>
                         </div>
                 </div>
-                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[21.5%] left-[35.8%]">
-                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
-                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[36%] left-[27.5%]">
-                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[44%] left-[18%]">
-                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[52%] left-[22%]">
-                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
-                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
-                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
-                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
+                <img src="/images/bookmark.png" alt="bookmark" class="absolute bottom-[21.5%] left-[35.8%]">
+                <img src="/images/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
+                <img src="/images/bookmark.png" alt="bookmark" class="absolute bottom-[36%] left-[27.5%]">
+                <img src="/images/bookmark.png" alt="bookmark" class="absolute bottom-[44%] left-[18%]">
+                <img src="/images/bookmark.png" alt="bookmark" class="absolute bottom-[52%] left-[22%]">
+                <img src="/images/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
+                <img src="/images/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
+                <img src="/images/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
+                <img src="/images/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
             </div>
         </div>
         <div class="md:hidden">
@@ -115,7 +115,7 @@
         </div>
     </main>
     <footer class="mt-10 md:mt-15 container mx-auto  px-10 mb-4">
-        <img src="/Logo2.png" class="inline mb-2"alt="Logo2">
+        <img src="/images/Logo2.png" class="inline mb-2"alt="Logo2">
         <div class="grid xl:grid-cols-3 gap-y-4">
             <div>
                 <p class="text-date-grey pb-2">Scala’s objective is to deliver complete customer satisfaction by addressing the main needs of the physical commodity industry, by continually providing an added value to the overall supply chain.</p>
