--- a/src/news.html
+++ b/src/news.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-primary">
     <header class="flex flex-row justify-between py-5 mb-5 px-10  container mx-auto items-center">
-        <img src="/Logo2.png" class=""alt="Logo2">
+        <img src="/images/Logo2.png" class=""alt="Logo2">
         <button  data-collapse-toggle="navbar-default" type="button" class="md:hidden" aria-controls="navbar-default" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -40,14 +40,14 @@
     </header>
         <main class="container mx-auto px-10 "> 
             <p class="text-sm text-center mb-1">News & Media</p>
-            <img src="/vector-2.png" alt="vector" class="mx-auto">
+            <img src="/images/vector-2.png" alt="vector" class="mx-auto">
             <h1 class="text-5xl font-extrabold leading-tight text-center my-2">Media Center</h1>
-            <img src="/vector-1.png" alt="vector" class="py-4 mb-2 mx-auto ">
+            <img src="/images/vector-1.png" alt="vector" class="py-4 mb-2 mx-auto ">
             <p class="text-center mb-10 md:mb-4">See what's making headlines in Scala news.</p>
             <div>
                 <div class=" grid md:grid-cols-3 gap-x-4 gap-y-10 md:gap-y-4 ">
                     <article class=" bg-white">
-                        <img src="/grant-ritchie-Nh7n1Kxb43U-unsplash.png" alt="Rectangle-8" class="w-full">
+                        <img src="/images/grant-ritchie-Nh7n1Kxb43U-unsplash.png" alt="Rectangle-8" class="w-full">
                         <div class="px-4 mt-4">
                             <p class="text-secondary text-sm">Blog</p>
                             <h3 class="font-bold">Article Title</h3>
@@ -56,7 +56,7 @@
                         </div>
                     </article>
                     <article class=" bg-white">
-                        <img src="/rext-10.png" alt="Rectangle-10" class="w-full">
+                        <img src="/images/rext-10.png" alt="Rectangle-10" class="w-full">
                         <div class="px-4 mt-4">
                             <p class="text-secondary text-sm">Blog</p>
                             <h3 class="font-bold">Article Title</h3>
@@ -65,7 +65,7 @@
                         </div>
                     </article>
                     <article class=" bg-white">
-                        <img src="/rext-12.png" alt="Rectangle-12" class="w-full">
+                        <img src="/images/rext-12.png" alt="Rectangle-12" class="w-full">
                         <div class="px-4 mt-4">
                             <p class="text-secondary text-sm">Blog</p>
                             <h3 class="font-bold">Article Title</h3>
@@ -74,7 +74,7 @@
                         </div>
                     </article>
                     <article class=" bg-white">
-                        <img src="/grant-ritchie-Nh7n1Kxb43U-unsplash.png" alt="Rectangle-8" class="w-full">
+                        <img src="/images/grant-ritchie-Nh7n1Kxb43U-unsplash.png" alt="Rectangle-8" class="w-full">
                         <div class="px-4 mt-4">
                             <p class="text-secondary text-sm">Blog</p>
                             <h3 class="font-bold">Article Title</h3>
@@ -83,7 +83,7 @@
                         </div>
                     </article>
                     <article class=" bg-white">
-                        <img src="/rext-10.png" alt="Rectangle-10" class="w-full">
+                        <img src="/images/rext-10.png" alt="Rectangle-10" class="w-full">
                         <div class="px-4 mt-4">
                             <p class="text-secondary text-sm">Blog</p>
                             <h3 class="font-bold">Article Title</h3>
@@ -92,7 +92,7 @@
                         </div>
                     </article>
                     <article class=" bg-white">
-                        <img src="/rext-12.png" alt="Rectangle-12" class="w-full">
+                        <img src="/images/rext-12.png" alt="Rectangle-12" class="w-full">
                         <div class="px-4 mt-4">
                             <p class="text-secondary text-sm">Blog</p>
                             <h3 class="font-bold">Article Title</h3>
@@ -101,7 +101,7 @@
                         </div>
                     </article>
                     <article class=" bg-white">
-                        <img src="/grant-ritchie-Nh7n1Kxb43U-unsplash.png" alt="Rectangle-8" class="w-full">
+                        <img src="/images/grant-ritchie-Nh7n1Kxb43U-unsplash.png" alt="Rectangle-8" class="w-full">
                         <div class="px-4 mt-4">
                             <p class="text-secondary text-sm">Blog</p>
                             <h3 class="font-bold">Article Title</h3>
@@ -110,7 +110,7 @@
                         </div>
                     </article>
                     <article class=" bg-white">
-                        <img src="/rext-10.png" alt="Rectangle-10" class="w-full">
+                        <img src="/images/rext-10.png" alt="Rectangle-10" class="w-full">
                         <div class="px-4 mt-4">
                             <p class="text-secondary text-sm">Blog</p>
                             <h3 class="font-bold">Article Title</h3>
@@ -119,7 +119,7 @@
                         </div>
                     </article>
                     <article class=" bg-white">
-                        <img src="/rext-12.png" alt="Rectangle-12" class="w-full">
+                        <img src="/images/rext-12.png" alt="Rectangle-12" class="w-full">
                         <div class="px-4 mt-4">
                             <p class="text-secondary text-sm">Blog</p>
                             <h3 class="font-bold">Article Title</h3>
@@ -128,7 +128,7 @@
                         </div>
                     </article>
                     <article class=" bg-white">
-                        <img src="/grant-ritchie-Nh7n1Kxb43U-unsplash.png" alt="Rectangle-8" class="w-full">
+                        <img src="/images/grant-ritchie-Nh7n1Kxb43U-unsplash.png" alt="Rectangle-8" class="w-full">
                         <div class="px-4 mt-4">
                             <p class="text-secondary text-sm">Blog</p>
                             <h3 class="font-bold">Article Title</h3>
@@ -137,7 +137,7 @@
                         </div>
                     </article>
                     <article class=" bg-white">
-                        <img src="/rext-10.png" alt="Rectangle-10" class="w-full">
+                        <img src="/images/rext-10.png" alt="Rectangle-10" class="w-full">
                         <div class="px-4 mt-4">
                             <p class="text-secondary text-sm">Blog</p>
                             <h3 class="font-bold">Article Title</h3>
@@ -146,7 +146,7 @@
                         </div>
                     </article>
                     <article class=" bg-white">
-                        <img src="/rext-12.png" alt="Rectangle-12" class="w-full">
+                        <img src="/images/rext-12.png" alt="Rectangle-12" class="w-full">
                         <div class="px-4 mt-4">
                             <p class="text-secondary text-sm">Blog</p>
                             <h3 class="font-bold">Article Title</h3>
@@ -178,7 +178,7 @@
         </main>
         
     <footer class="mt-10 md:mt-0 container mx-auto  px-10  mb-4">
-        <img src="/Logo2.png" class="inline mb-2"alt="Logo2">
+        <img src="/images/Logo2.png" class="inline mb-2"alt="Logo2">
         <div class="grid xl:grid-cols-3 gap-y-4">
             <div>
                 <p class="text-tertiary-1 pb-2">Scala’s objective is to deliver complete customer satisfaction by addressing the main needs of the physical commodity industry, by continually providing an added value to the overall supply chain.</p>
