--- a/src/our-partners.html
+++ b/src/our-partners.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-primary">
     <header class="flex flex-row justify-between py-5 mb-5 px-10  container mx-auto items-center">
-        <img src="/Logo2.png" class=""alt="Logo2">
+        <img src="/images/Logo2.png" class=""alt="Logo2">
         <button  data-collapse-toggle="navbar-default" type="button" class="md:hidden" aria-controls="navbar-default" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -40,22 +40,22 @@
     </header>
         <main class="container mx-auto px-10 "> 
             <p class="text-sm text-center mb-1">Who We Are?</p>
-            <img src="/vector-2.png" alt="vector" class="mx-auto">
+            <img src="/images/vector-2.png" alt="vector" class="mx-auto">
             <h1 class="text-5xl font-extrabold leading-tight text-center my-2">Our Partners</h1>
-            <img src="/vector-1.png" alt="vector" class="py-2 mb-4 mx-auto ">
+            <img src="/images/vector-1.png" alt="vector" class="py-2 mb-4 mx-auto ">
             <p class="text-center mb-10 md:mb-6 max-w-3xl mx-auto">Our partners have played an instrumental role in Scala’s success over the years.</p>
            <figure class="mb-10">
-            <img src="/hand.png" alt="hand" class="w-full">
+            <img src="/images/hand.png" alt="hand" class="w-full">
            </figure>
         </main>
         <aside class=" bg-tertiary-2 ">
             <div class="container my-20 grid grid-cols-3 mx-auto px-10 gap-x-4 items-center gap-y-8 relative">
                 <figure class="col-span-3 md:col-span-1">
-                    <img src="/president-ceo.png" alt="rectangle" class="xl:absolute -top-8 mx-auto">
+                    <img src="/images/president-ceo.png" alt="rectangle" class="xl:absolute -top-8 mx-auto">
                 </figure>
                 <div class="col-span-3 md:col-span-2 my-8">
                 <p class="text-sm uppercase mt-2 ">PRESIDENT & CEO</p>
-                <img src="/vector-2.png" alt="vector" class="mt-2">
+                <img src="/images/vector-2.png" alt="vector" class="mt-2">
                 <h2 class="text-2xl font-bold capitalize mt-2">John Doe</h2>
                 <p class="leading-7 mt-4">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                 </div>
@@ -65,66 +65,66 @@
             <div class="grid grid-cols-2 gap-x-auto gap-x-24 gap-y-10 mt-6">
                 <div class="flex flex-col col-span-2 md:col-span-1">
                     <div class="flex flex-row gap-x-2 items-center">
-                        <img src="/face-3.png" alt="face">
+                        <img src="/images/face-3.png" alt="face">
                         <div>
                             <p>John Doe</p>
                             <p class="text-sm uppercase">WORK TYPE</p>
-                            <img src="/vvv.png" alt="vector" class="mt-1">
+                            <img src="/images/vvv.png" alt="vector" class="mt-1">
                         </div>
                     </div>
                     <p class="text-sm">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper</p>
                 </div>
                 <div class="flex flex-col col-span-2 md:col-span-1">
                     <div class="flex flex-row gap-x-2 items-center">
-                        <img src="/face-4.png" alt="face">
+                        <img src="/images/face-4.png" alt="face">
                         <div>
                             <p>Jane Doe</p>
                             <p class="text-sm uppercase">WORK TYPE</p>
-                            <img src="/vvv.png" alt="vector" class="mt-1">
+                            <img src="/images/vvv.png" alt="vector" class="mt-1">
                         </div>
                     </div>
                     <p class="text-sm">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper</p>
                 </div>
                 <div class="flex flex-col col-span-2 md:col-span-1">
                     <div class="flex flex-row gap-x-2 items-center">
-                        <img src="/face-5.png" alt="face">
+                        <img src="/images/face-5.png" alt="face">
                         <div>
                             <p>John Doe</p>
                             <p class="text-sm uppercase">WORK TYPE</p>
-                            <img src="/vvv.png" alt="vector" class="mt-1">
+                            <img src="/images/vvv.png" alt="vector" class="mt-1">
                         </div>
                     </div>
                     <p class="text-sm">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper</p>
                 </div>
                 <div class="flex flex-col col-span-2 md:col-span-1">
                     <div class="flex flex-row gap-x-2 items-center">
-                        <img src="/face-6.png" alt="face">
+                        <img src="/images/face-6.png" alt="face">
                         <div>
                             <p>Jane Doe</p>
                             <p class="text-sm uppercase">WORK TYPE</p>
-                            <img src="/vvv.png" alt="vector" class="mt-1">
+                            <img src="/images/vvv.png" alt="vector" class="mt-1">
                         </div>
                     </div>
                     <p class="text-sm">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper</p>
                 </div>
                 <div class="flex flex-col col-span-2 md:col-span-1">
                     <div class="flex flex-row gap-x-2 items-center">
-                        <img src="/face-5.png" alt="face">
+                        <img src="/images/face-5.png" alt="face">
                         <div>
                             <p>John Doe</p>
                             <p class="text-sm uppercase">WORK TYPE</p>
-                            <img src="/vvv.png" alt="vector" class="mt-1">
+                            <img src="/images/vvv.png" alt="vector" class="mt-1">
                         </div>
                     </div>
                     <p class="text-sm">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper</p>
                 </div>
                 <div class="flex flex-col col-span-2 md:col-span-1">
                     <div class="flex flex-row gap-x-2 items-center">
-                        <img src="/face-6.png" alt="face">
+                        <img src="/images/face-6.png" alt="face">
                         <div>
                             <p>Jane Doe</p>
                             <p class="text-sm uppercase">WORK TYPE</p>
-                            <img src="/vvv.png" alt="vector" class="mt-1">
+                            <img src="/images/vvv.png" alt="vector" class="mt-1">
                         </div>
                     </div>
                     <p class="text-sm">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper</p>
@@ -132,7 +132,7 @@
             </div>
         </section>
     <footer class="mt-10 md:mt-20 container mx-auto  px-10  mb-4">
-        <img src="/Logo2.png" class="inline mb-2"alt="Logo2">
+        <img src="/images/Logo2.png" class="inline mb-2"alt="Logo2">
         <div class="grid xl:grid-cols-3 gap-y-4">
             <div>
                 <p class="text-tertiary-1 pb-2">Scala’s objective is to deliver complete customer satisfaction by addressing the main needs of the physical commodity industry, by continually providing an added value to the overall supply chain.</p>
