--- a/src/our-values.html
+++ b/src/our-values.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-primary">
     <header class="flex flex-row justify-between py-5 mb-5 px-10  container mx-auto items-center">
-        <img src="/Logo2.png" class=""alt="Logo2">
+        <img src="/images/Logo2.png" class=""alt="Logo2">
         <button  data-collapse-toggle="navbar-default" type="button" class="md:hidden" aria-controls="navbar-default" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -40,16 +40,16 @@
     </header>
         <main class="container mx-auto px-10 "> 
             <p class="text-sm text-center mb-1">Who We Are?</p>
-            <img src="/vector-2.png" alt="vector" class="mx-auto">
+            <img src="/images/vector-2.png" alt="vector" class="mx-auto">
             <h1 class="text-5xl font-extrabold leading-tight text-center my-2">Our Values</h1>
-            <img src="/vector-1.png" alt="vector" class="py-2 mb-4 mx-auto ">
+            <img src="/images/vector-1.png" alt="vector" class="py-2 mb-4 mx-auto ">
             <p class="text-center mb-10 md:mb-6 max-w-3xl mx-auto">Tricon’s success and leadership has been achieved by remaining loyal to the pillars on which the Company was founded.</p>
            <figure class="mb-10">
-            <img src="/hand.png" alt="hand" class="w-full">
+            <img src="/images/hand.png" alt="hand" class="w-full">
            </figure>
            <article class="relative">
-            <img src="/group-26.png" alt="point" class="absolute bottom-5 -z-10 -left-28 hidden lg:block">
-            <img src="/group-25.png" alt="hex" class="absolute bottom-0 -right-20 hidden xl:block -z-10"> 
+            <img src="/images/group-26.png" alt="point" class="absolute bottom-5 -z-10 -left-28 hidden lg:block">
+            <img src="/images/group-25.png" alt="hex" class="absolute bottom-0 -right-20 hidden xl:block -z-10"> 
             <h2 class="font-bold text-2xl text-center mb-4">Our <span class="text-secondary">Core</span> Principles</h2>
             <p class="max-w-3xl text-center mx-auto mb-12">Scala strives for reliability of service and competitiveness in our proposals, in turn generating the greatest possible results for our partners and shareholders.</p>
             <p class="text-center mx-auto">We believe the following values set us apart from our competition:</p>
@@ -67,18 +67,18 @@
         <section class=" bg-tertiary-2">
             <div class="container my-20 grid grid-cols-3 mx-auto px-10 gap-x-4 items-center gap-y-8 relative">
                 <figure class="col-span-3 md:col-span-1">
-                    <img src="/pexel.png" alt="rectangle" class="xl:absolute -top-8 mx-auto">
+                    <img src="/images/pexel.png" alt="rectangle" class="xl:absolute -top-8 mx-auto">
                 </figure>
                 <div class="col-span-3 md:col-span-2 xl:py-20 py-10 ">
                 <p class="text-sm uppercase mt-2 ">diversity</p>
-                <img src="/vector-2.png" alt="vector" class="mt-2">
+                <img src="/images/vector-2.png" alt="vector" class="mt-2">
                 <h2 class="text-2xl font-bold capitalize mt-2">The diversity of our people is one of our greatest strengths.</h2>
                 <p class="leading-7 mt-4 mb-9">Scala employs more than 400 employees globally with diverse cultures and backgrounds. As a global supplier and purchaser of products worldwide, Scala operates across a range of cultures and international markets and is committed to working well with all the communities with which we conduct business.</p>
                 </div>
             </div>
         </section>
     <footer class="mt-12 md:mt-0 container mx-auto  px-10  mb-4">
-        <img src="/Logo2.png" class="inline mb-2"alt="Logo2">
+        <img src="/images/Logo2.png" class="inline mb-2"alt="Logo2">
         <div class="grid xl:grid-cols-3 gap-y-4">
             <div>
                 <p class="text-tertiary-1 pb-2">Scala’s objective is to deliver complete customer satisfaction by addressing the main needs of the physical commodity industry, by continually providing an added value to the overall supply chain.</p>
