--- a/src/chemicals.html
+++ b/src/chemicals.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-primary">
     <header class="flex flex-row justify-between py-5 md:mb-24 mb-10 container mx-auto items-center px-10">
-        <img src="/logo2.png" class=""alt="Logo2">
+        <img src="/images/logo2.png" class=""alt="Logo2">
         <button  data-collapse-toggle="navbar-default" type="button" class="md:hidden" aria-controls="navbar-default" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -41,21 +41,21 @@
     <main class="container mx-auto grid grid-cols-2 gap-x-24 md:mb-32 mb-16 gap-y-20 px-10 items-center">
         <div class="mx-auto col-span-2 md:col-span-1">
             <p class="text-sm ">What We Do</p>
-            <img src="/vvv.png" alt="vector" class="mt-1">
+            <img src="/images/vvv.png" alt="vector" class="mt-1">
             <h1 class="text-5xl leading-tight font-extrabold mt-2">Chemicals</h1>
-            <img src="/blue-vector.png" alt="vector" class="mt-4">
+            <img src="/images/blue-vector.png" alt="vector" class="mt-4">
             <p class="my-6">Over the years, Tricon has initiated, expanded and consolidated as a lead international trader and marketer for main petrochemicals, essential as building blocks for the finished products that we use so widely in our daily lives.</p>
         </div>
             <div class="col-span-2 md:col-span-1">
                 <figure class="relative">
-                    <img src="/fabric.png" class="w-full" alt="img">
-                    <div class="absolute -top-[16%] -right-[10%] w-1/5"><img src="/star-1.png" alt="icon" class=""></div>
-                    <div class="absolute -top-[8.5%] -right-[4.5%] xl:-top-[6.60%]  w-1/12"><img src="/chemicals.png" alt="icon" class="inline"></div>
-                    <div class="absolute bottom-[10%] -right-[10%] -z-10 hidden lg:block "><img src="/group-1.png" alt="icon" class=""></div>
+                    <img src="/images/fabric.png" class="w-full" alt="img">
+                    <div class="absolute -top-[16%] -right-[10%] w-1/5"><img src="/images/star-1.png" alt="icon" class=""></div>
+                    <div class="absolute -top-[8.5%] -right-[4.5%] xl:-top-[6.60%]  w-1/12"><img src="/images/chemicals.png" alt="icon" class="inline"></div>
+                    <div class="absolute bottom-[10%] -right-[10%] -z-10 hidden lg:block "><img src="/images/group-1.png" alt="icon" class=""></div>
                 </figure>
                 <div class="mt-8">
                     <p class="text-special leading-10"><span class="text-secondary">Scala’s</span> 2021 Statics</p>
-                    <img src="/vvv.png" alt="vector" class="mt-4">
+                    <img src="/images/vvv.png" alt="vector" class="mt-4">
                         <ul class="flex-col gap-y-8 mt-8 gap-x-4 justify-between md:flex-row flex">
                             <li class="">
                                 <p class="text-special leading-8 font-bold">57%</p><br>
@@ -80,41 +80,41 @@
     <aside class=" bg-tertiary-2 mb-36">
         <div class="container my-20 grid grid-cols-3 mx-auto px-10 gap-x-4 items-center gap-y-8 relative">
             <figure class="col-span-3 md:col-span-1">
-                <img src="/president-ceo.png" alt="rectangle" class="xl:absolute -top-8 mx-auto">
+                <img src="/images/president-ceo.png" alt="rectangle" class="xl:absolute -top-8 mx-auto">
             </figure>
             <div class="col-span-3 md:col-span-2 my-8">
             <p class="text-sm uppercase mt-2 ">PRESIDENT & CEO</p>
-            <img src="/vector-2.png" alt="vector" class="mt-2">
+            <img src="/images/vector-2.png" alt="vector" class="mt-2">
             <h2 class="text-2xl font-bold capitalize mt-2">John Doe</h2>
             <p class="leading-7 mt-4">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
             </div>
         </div>
     </aside>
     <div class="container mx-auto flex flex-col md:gap-y-4 gap-y-8 mt-10 px-16 relative">
-        <img src="/group-26.png" alt="point" class="absolute -bottom-15 -z-10 -left-20 hidden lg:block">
+        <img src="/images/group-26.png" alt="point" class="absolute -bottom-15 -z-10 -left-20 hidden lg:block">
         <div class="text-center max-w-3xl leading-7 mx-auto relative">
-        <img src="/img1.png" alt="vector" class="absolute -left-24 -top-12 hidden lg:block">
-        <img src="/img2.png" alt="vector" class="absolute -right-24 -bottom-12 hidden lg:block">
+        <img src="/images/img1.png" alt="vector" class="absolute -left-24 -top-12 hidden lg:block">
+        <img src="/images/img2.png" alt="vector" class="absolute -right-24 -bottom-12 hidden lg:block">
         <p>Scala fosters creativity that pushes the limits of the business world, and our ever-expanding family highligts the company’s commintment to each region and its faith in its employees.</p>
         </div>
         <div class="flex flex-row mx-auto justify-center gap-x-4 mt-8 sm:mt-0">
-            <img src="/ellipse.png" alt="elipse">
+            <img src="/images/ellipse.png" alt="elipse">
             <div class="flex flex-col">
                 <p class="font-bold">Jane Doe</p>
                 <p class="text-sm">Sales Manager</p>
             </div>
         </div>
         <div class="flex flex-row mx-auto md:gap-x-2 gap-x-6 mt-2">
-            <img src="/star-211.png" alt="star">
-            <img src="/star-212.png" alt="star">
-            <img src="/star-212.png" alt="star">
+            <img src="/images/star-211.png" alt="star">
+            <img src="/images/star-212.png" alt="star">
+            <img src="/images/star-212.png" alt="star">
         </div>
     </div>
     <div class="container mx-auto mt-24 px-10">
         <h2 class="text-2xl mb-4"><span class="text-secondary">Chemical</span> News</h2>
         <div class=" grid md:grid-cols-3 gap-x-4 gap-y-10">
             <article class=" bg-white">
-                <img src="/grant-ritchie-Nh7n1Kxb43U-unsplash.png" alt="Rectangle-8" class="w-full">
+                <img src="/images/grant-ritchie-Nh7n1Kxb43U-unsplash.png" alt="Rectangle-8" class="w-full">
                 <div class="px-4 mt-4">
                     <p class="text-secondary text-sm">Blog</p>
                     <h3 class="font-bold">Article Title</h3>
@@ -123,7 +123,7 @@
                 </div>
             </article>
             <article class=" bg-white">
-                <img src="/rext-10.png" alt="Rectangle-10" class="w-full">
+                <img src="/images/rext-10.png" alt="Rectangle-10" class="w-full">
                 <div class="px-4 mt-4">
                     <p class="text-secondary text-sm">Blog</p>
                     <h3 class="font-bold">Article Title</h3>
@@ -132,7 +132,7 @@
                 </div>
             </article>
             <article class=" bg-white">
-                <img src="/rext-12.png" alt="Rectangle-12" class="w-full">
+                <img src="/images/rext-12.png" alt="Rectangle-12" class="w-full">
                 <div class="px-4 mt-4">
                     <p class="text-secondary text-sm">Blog</p>
                     <h3 class="font-bold">Article Title</h3>
@@ -145,7 +145,7 @@
     <section class="container mx-auto grid-cols-2 mt-20 grid gap-x-4 px-10 gap-y-20">
         <div class="col-span-2 md:col-span-1">
             <h2 class="text-2xl font-bold">Frequently Asked <span class="text-secondary"> Questions </span></h2>
-            <img src="/vvv.png" alt="vector" class="mt-2 mb-6">
+            <img src="/images/vvv.png" alt="vector" class="mt-2 mb-6">
             <details class="relative group py-6 border-secondary border-y-half border-opacity-25">
                 <summary class="font-bold cursor-none flex-row flex list-none focus:outline-none group justify-between">What primary products are traded under the Petrochemical business unit?
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 block group-open:hidden float-right">
@@ -176,7 +176,7 @@
         <div class="mx-auto col-span-2 md:col-span-1">
             <div class="bg-white p-6 mx-auto col-span-2 md:col-span-1 ">
                 <h2 class="font-bold text-2xl text-center mt-2">Send a Message</h2>
-                <img src="/vector-2.png" alt="vector" class="mx-auto mt-2 mb-4">
+                <img src="/images/vector-2.png" alt="vector" class="mx-auto mt-2 mb-4">
                 <form action="" class="grid grid-cols-2 gap-4">
                     <div class="flex flex-col gap-y-2 col-span-2 md:col-span-1 ">
                         <label for="first-name" class="text-xs">First Name</label>
@@ -470,7 +470,7 @@
         </div>
     </section>
     <footer class="mt-14 container mx-auto  px-10 mb-4">
-        <img src="/Logo2.png" class="inline mb-2"alt="Logo2">
+        <img src="/images/Logo2.png" class="inline mb-2"alt="Logo2">
         <div class="grid xl:grid-cols-3 gap-y-4">
             <div>
                 <p class="text-tertiary-1 pb-2">Scala’s objective is to deliver complete customer satisfaction by addressing the main needs of the physical commodity industry, by continually providing an added value to the overall supply chain.</p>
