--- a/src/home.html
+++ b/src/home.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-primary">
         <header class="flex flex-row justify-between py-5 xl:mb-20 mb-10 px-10 container mx-auto">
-            <img src="/Logo2.png" class=""alt="Logo2">
+            <img src="/images/Logo2.png" class=""alt="Logo2">
             <button  data-collapse-toggle="navbar-default" type="button" class="md:hidden" aria-controls="navbar-default" aria-expanded="false">
                 <span class="sr-only">Open main menu</span>
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -42,7 +42,7 @@
         <div class="grid xl:grid-cols-2 xl:mb-24 mb-2 gap-y-8 ">
             <article class="my-auto xl xl:text-left text-center w-5/6 xl:mr-auto mx-auto xl:ml-0 gap-y-8">
                 <h1 class="text-5xl leading-tight font-extrabold">Adding Value Into the Petro Chemical Chain</h1>
-                <img src="/veektör.png" alt="vector" class="mb-2 mt-6 inline">
+                <img src="/images/veektör.png" alt="vector" class="mb-2 mt-6 inline">
                 <p class="my-6">Scala’s objective is to deliver complete customer satisfaction by addressing the main needs od the physical commodity industry, by continually providing an added value to the overall supply chain.</p>
                 <div class="flex flex-row gap-x-4">
                 <button class="text-white bg-secondary border-2 xl:basis-1/3 px-10 py-3 basis-1/2">Read More</button>
@@ -50,12 +50,12 @@
                 </div>
             </article>
             <figure class="w-5/6 mx-auto p-16 xl:ml-0  xl:p-0">
-               <div class="relative"><img src="/joshua-sun-5OIaZyOiN7E-unsplash.png" class="inline text-center w-full" alt="img">
-                    <div class="absolute top-10 -left-16"><img src="/chemicals.png" alt="icon" class=" bg-star1 bg-cover py-10 px-11 "> </div>
-                    <div class="absolute -bottom-16 left-16"><img src="/sustainable.png" alt="icon" class=" bg-star1 bg-cover p-10 "> </div>
-                    <div class="absolute right-10 -top-16"><img src="/raw-materials.png" alt="icon" class=" bg-star1 bg-cover p-10 "> </div>
-                    <div class="absolute bottom-24 -right-20"><img src="/bottle.png" alt="icon" class=" bg-star1 bg-cover p-10 "></div>
-                    <div class="absolute hidden xl:block -right-32 top-16 -z-10 "><img src="/group-1.png" alt="group-1"></div>
+               <div class="relative"><img src="/images/joshua-sun-5OIaZyOiN7E-unsplash.png" class="inline text-center w-full" alt="img">
+                    <div class="absolute top-10 -left-16"><img src="/images/chemicals.png" alt="icon" class=" bg-star1 bg-cover py-10 px-11 "> </div>
+                    <div class="absolute -bottom-16 left-16"><img src="/images/sustainable.png" alt="icon" class=" bg-star1 bg-cover p-10 "> </div>
+                    <div class="absolute right-10 -top-16"><img src="/images/raw-materials.png" alt="icon" class=" bg-star1 bg-cover p-10 "> </div>
+                    <div class="absolute bottom-24 -right-20"><img src="/images/bottle.png" alt="icon" class=" bg-star1 bg-cover p-10 "></div>
+                    <div class="absolute hidden xl:block -right-32 top-16 -z-10 "><img src="/images/group-1.png" alt="group-1"></div>
                 </div>
             </figure>
         </div>
@@ -63,28 +63,28 @@
             <div class="relative">
                 <p class="text-special leading-10 mb-0 xl:mb-16"><span class="text-secondary "> Scala</span> is an industry leader in the global trade and distribution market.</p>
                 <div class="hidden xl:block absolute -left-24">
-                    <img src="/group-2.png" alt="square">
+                    <img src="/images/group-2.png" alt="square">
                 </div>
             </div>
             <div class="col-span-2 grid xl:grid-cols-2 gap-x-5 xl:gap-y-4 gap-y-8">
                 <article>
-                    <img src="/sustainable-2.png" alt="small-icon"  class="p-4 inline bg-sm-star bg-cover">
+                    <img src="/images/sustainable-2.png" alt="small-icon"  class="p-4 inline bg-sm-star bg-cover">
                     <h3 class="py-2 font-bold">Logistics</h3>
                     <p class="text-sm">Logistics management is a key activity and core competence in our business. Our expertise covers multiple modes of transport, including railcars, barges, and both dry bulk and liquids vessels. We recently created Lighthouse, a freight brokerage joint venture, continuing to strengthen our capabilities in this critical area.</p>
                 </article>
                 <article>
-                    <img src="/sustainable-2.png" alt="small-icon" class="p-4 inline bg-cover bg-sm-star">
+                    <img src="/images/sustainable-2.png" alt="small-icon" class="p-4 inline bg-cover bg-sm-star">
                     <h3 class="py-2 font-bold">Risk Management</h3>
                     <p class="text-sm">We manage various risks in our operations, including price risk, credit, liquidity and operational risks. 
                         The goal of our process is to minimize costs for our suppliers and customers, while reducing uncertainty inherent in the commodity trade flows we handle.</p>
                 </article>
                 <article>
-                    <img src="/sustainable-2.png" alt="small-icon"  class="p-4 inline bg-sm-star bg-cover">
+                    <img src="/images/sustainable-2.png" alt="small-icon"  class="p-4 inline bg-sm-star bg-cover">
                     <h3 class="py-2 font-bold">Market Intelligence</h3>
                     <p class="text-sm">Our extended coverage around the world, with presence across numerous markets provides us with unique insights and allows us to spot valuable opportunities. We carefully cultivate relationships with market participants, including via sponsorship and participation of several industry conferences.</p>
                 </article>
                 <article>
-                    <img src="/sustainable-2.png" alt="small-icon"  class="p-4 inline bg-sm-star bg-cover">
+                    <img src="/images/sustainable-2.png" alt="small-icon"  class="p-4 inline bg-sm-star bg-cover">
                     <h3 class="py-2 font-bold">Financing</h3>
                     <p class="text-sm">Inherent to our business we provide various forms of financing to our customers and suppliers.
                         We participate in prepayment arrangements, secured financing structures, and provide open account terms.</p>
@@ -93,9 +93,9 @@
         </div>
         <div class="grid xl:grid-cols-2 xl:gap-x-4 xl:my-32 my-16 gap-y-10 px-10">
             <article>
-                <img src="/rectangle-4.png" alt="Rectangle-4" class="w-full">
+                <img src="/images/rectangle-4.png" alt="Rectangle-4" class="w-full">
                 <h3 class="mt-4">Career</h3>
-                <img src="/vector-2.png" alt="vektor">
+                <img src="/images/vector-2.png" alt="vektor">
                 <h2 class="text-2xl pt-3 pb-2 capitalize font-bold">what it's like to be part of the Scala team</h2>
                 <p class="text-sm">Fundamental to the growth of the business is our ability to attract, hire, and retain the best
                     talent. Our people are among the most creative, ambitious and diverse in the industry, and
@@ -103,9 +103,9 @@
                     <button class="text-white bg-secondary border-2 py-3 px-8 mt-4">Read More</button>
             </article>
             <article>
-                <img src="/rectangle-5.png" alt="Rectangle-5" class="w-full">
+                <img src="/images/rectangle-5.png" alt="Rectangle-5" class="w-full">
                 <h3 class="mt-4">Sustainable Development</h3>
-                <img src="/vector-2.png" alt="vektor">
+                <img src="/images/vector-2.png" alt="vektor">
                 <h2 class="text-2xl pt-3 pb-2 capitalize font-bold">Our Mission</h2>
                 <p class="text-sm">We aim for our activities to contribute to a more just, equal, and inclusive society, where we
                     continuously improve our environmental impact on the journey to a net zero, circular
@@ -115,7 +115,7 @@
         </div>
         <div class=" grid xl:grid-cols-3 xl:gap-x-4 gap-y-10 px-10">
             <article class=" bg-white">
-                <img src="/grant-ritchie-Nh7n1Kxb43U-unsplash.png" alt="Rectangle-8" class="w-full">
+                <img src="/images/grant-ritchie-Nh7n1Kxb43U-unsplash.png" alt="Rectangle-8" class="w-full">
                 <div class="px-4 mt-4">
                     <p class="text-secondary text-sm">Blog</p>
                     <h3 class="font-bold">Article Title</h3>
@@ -124,7 +124,7 @@
                 </div>
             </article>
             <article class=" bg-white">
-                <img src="/rext-10.png" alt="Rectangle-10" class="w-full">
+                <img src="/images/rext-10.png" alt="Rectangle-10" class="w-full">
                 <div class="px-4 mt-4">
                     <p class="text-secondary text-sm">Blog</p>
                     <h3 class="font-bold">Article Title</h3>
@@ -133,7 +133,7 @@
                 </div>
             </article>
             <article class=" bg-white">
-                <img src="/rext-12.png" alt="Rectangle-12" class="w-full">
+                <img src="/images/rext-12.png" alt="Rectangle-12" class="w-full">
                 <div class="px-4 mt-4">
                     <p class="text-secondary text-sm">Blog</p>
                     <h3 class="font-bold">Article Title</h3>
@@ -146,7 +146,7 @@
     <section class="mx-auto container xl:mt-36 mt-20 grid xl:grid-cols-4 grid-cols-3 gap-x-32 gap-y-8 px-10">
         <div class="xl:col-span-1 col-span-3 order-last xl:order-first text-center xl:text-left">
             <p class="text-sm mb-1">Explore Scala's Global Presence</p>
-            <img src="/vector-2.png" alt="vektor" class="inline">
+            <img src="/images/vector-2.png" alt="vektor" class="inline">
             <h2 class="mt-2 font-bold text-2xl mb-3">Our Locations</h2>
             <p class="text-sm mb-6" >Almaty, Kazakhstan <br>
                 Bogota, Colombia <br>
@@ -171,11 +171,11 @@
                 <button class="text-white bg-secondary text-sm py-3 px-8 leading-7">View Our Locations</button>
         </div>
         <figure class="col-span-3">
-            <img src="/world-map-1.png" alt="World-Map" class="w-full">
+            <img src="/images/world-map-1.png" alt="World-Map" class="w-full">
         </figure>
     </section>
-    <footer class="mt-10 md:mt-24 container mx-auto  px-10 mb-4">
-        <img src="/Logo2.png" class="inline mb-2"alt="Logo2">
+    <footer class="mt-16 md:mt-24 container mx-auto  px-10 mb-4">
+        <img src="/images/Logo2.png" class="inline mb-2"alt="Logo2">
         <div class="grid xl:grid-cols-3 gap-y-4">
             <div>
                 <p class="text-tertiary-1 pb-2">Scala’s objective is to deliver complete customer satisfaction by addressing the main needs of the physical commodity industry, by continually providing an added value to the overall supply chain.</p>
